# hatari

./: Cargo.toml  Makefile  README.md  go.mod  main.go
cmd/: init.go  root.go  vars_global.go
docs/: CNAME  index.html
internal/engine/: engine.go
src/: lib.rs  main.rs  repository.rs
